--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
                         Nuit à partir de <strong>25£</strong>
                     </p>
                     <div id="stars">
-                        <p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <div class="grey-stars">
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </p>
+                        </div>
                     </div>
                 </article>
                 <article> 
@@ -120,13 +120,11 @@
                         Nuit à partir de<strong>52£</strong> 
                     </p>
                     <div id="stars">
-                        <p>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </article>       
                 <article>
@@ -140,13 +138,13 @@
                         Nuit à partir de <strong>76£</strong>
                     </p>
                     <div id="stars">
-                        <p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <div class="grey-stars">
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </p>
+                        </div>
                         </div>
                 </article>
                 <article>
@@ -163,13 +161,13 @@
                             Nuit à partir de<strong>46£</strong> 
                         </p>
                         <div id="stars"> 
-                            <p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <div class="grey-stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </p>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -185,13 +183,13 @@
                         Nuit à partir de<strong>23£</strong> 
                     </p>
                     <div id="stars"> 
-                        <p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <div class="grey-stars">
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </p>
+                        </div>   
                     </div>   
                 </article>
                 <article>
@@ -205,21 +203,19 @@
                         Nuit à partir de <strong>96£</strong>
                     </P>
                     <div id="stars"> 
-                        <p>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
                     </div>   
                 </article> 
             </div>
-            <div id="sentanse">
-                <p>
-                    Afficher plus
-                </p> 
-            </div>
+                <div class="sentanse">
+                    <p>
+                         Afficher plus
+                    </p>
+                </div> 
         </section >
         <section class="popular">
             <div id="more">
@@ -227,13 +223,14 @@
                 <i class="fas fa-chart-line"></i>
             </div>                    
             <div class="people">
-                <article>
-                    <div class="sun">
-                        <a>
-                            <img src="images/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"alt="chambre pop1"/>
-                        </a>
-                    </div>
-                    <div class="morning">
+                <div class="full">
+                    <article>
+                        <div class="sun">
+                            <a>
+                                <img src="images/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"alt="chambre pop1"/>
+                            </a>
+                        </div>
+                        <div class="morning">
                         <h3>
                             Hôtel le soleil du matin 
                         </h3>
@@ -241,64 +238,66 @@
                             Nuit à partir de <strong>128£</strong>
                         </P>
                         <div id="stars">
-                            <p>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
-                    </div>
-                </article>
-                <article>
-                    <div class="sun">   
-                        <a>
-                            <img src="images/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre pop2">
-                        </a>
-                    </div>
-                    <div class="morning">
-                        <h3>
-                            A u coeur de l'eau
-                        </h3> 
-                        <p>
-                            Nuit à partir de <strong>71£</strong> 
-                        </p>
-                        <div id="stars">
-                            <p>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </p>
+                    </article>
+                </div>
+                <div class="water">
+                    <article>
+                        <div class="sun">   
+                            <a>
+                                <img src="images/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre pop2">
+                            </a>
                         </div>
-                    </div>
-                </article>
-                <article>       
-                    <div class="sun">
-                        <a>
-                            <img src="images/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre pop3"/>
-                        </a>
-                    </div>
-                    <div class="morning">
-                        <h3>
-                            Hôtel tout bleu et blanc
-                        </h3>
-                        <p>
-                            Nuit à partir de <strong> 68£ </strong>
-                        </P>
-                        <div id="stars">
+                        <div class="morning">
+                            <h3>
+                                A u coeur de l'eau
+                            </h3> 
                             <p>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                Nuit à partir de <strong>71£</strong> 
                             </p>
+                            <div id="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <div class="grey-stars">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </article>
+                    </article>
+                </div>
+                <div class="dreams">
+                    <article>       
+                        <div class="sun">
+                            <a>
+                                <img src="images/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre pop3"/>
+                            </a>
+                        </div>
+                        <div class="morning">
+                            <h3>
+                                Hôtel tout bleu et blanc
+                            </h3>
+                            <p>
+                                Nuit à partir de <strong> 68£ </strong>
+                            </P>
+                            <div id="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <div class="grey-stars">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
             </div>
         </section>
     </section>
@@ -312,44 +311,64 @@
                     <a>
                         <img src="images/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"alt="quai"/>
                     </a>
-                    <h3>Vieux port</h3>
+                    <h3>
+                        Vieux port
+                    </h3>
                 </article>
             </div>
             <div class="pomègue">
-                <article>
-                    <a>
-                        <img src="images/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=" chateau sur la montagne"/>
-                    </a>
-                    <h3> port de pomègues</h3>
-                </article>
-                <article>
-                    <a>
-                        <img src="images/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"alt="hébergement vue de mer"/>
-                    </a>
-                    <h3> île de Frioul</h3>
-                </article>
+                <div class="cash">
+                    <article>
+                        <a>
+                            <img src="images/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=" chateau sur la montagne"/>
+                        </a>
+                        <h3> 
+                            port de pomègues
+                        </h3>
+                    </article>
+                </div>
+                <div class="flow">
+                    <article>
+                        <a>
+                            <img src="images/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"alt="hébergement vue de mer"/>
+                        </a>
+                        <h3> 
+                            île de Frioul
+                        </h3>
+                    </article>
+                </div>
             </div>
             <div class="parc">
                 <article>
                     <a>
                         <img src="images/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt=" rochers vue de mer"/>
                     </a>
-                    <h3> Parc National des Clanques</h3>
+                    <h3> 
+                        Parc National des Clanques
+                    </h3>
                 </article>
             </div>
             <div class="dame">
-                <article>
-                    <a>
-                        <img src="images/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="aglomération"/>
-                    </a>
-                    <h3> Notre-Dame-De-La-Garde</h3>
-                </article>
-                <article>
-                    <a>
-                        <img src="images/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="chateau patrimoine"/>
-                    </a>
-                    <h3> Parc Longchamp</h3>
-                </article>
+                <div class="weh">
+                    <article>
+                        <a>
+                            <img src="images/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="aglomération"/>
+                        </a>
+                        <h3>
+                             Notre-Dame-De-La-Garde
+                        </h3>
+                    </article>
+                </div>
+                <div class="unsplash">
+                    <article>
+                        <a>
+                            <img src="images/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="chateau patrimoine"/>
+                        </a>
+                        <h3> 
+                            Parc Longchamp
+                        </h3>
+                    </article>
+                </div>
             </div>
         </div>
     </section>
