modif on section "one"

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <i class="fas fa-star"></i>
                         <div class="grey-stars">
                             <i class="fas fa-star"></i>
-                        </div>
+                        </
                     </div>
                 </article>
                 <article> 
@@ -143,9 +143,10 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <div class="grey-stars">
+                        <div class="grey-stars">
                             <i class="fas fa-star"></i>
                         </div>
-                        </div>
+                    </div>
                 </article>
                 <article>
                     <div class="ocean">
