modif filters, articles and icones

--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
 
         </nav>
     </header>
-    <section class="une">
-        <h1>
-            Trouver votre hébergement pour des vaccances de rêve    
-        </h1>
-        <p>
-            En plein centre ville ou en pleine nature
-        </P> 
+    <section class="one">
+        <div class="all">
+            <h1>
+                Trouver votre hébergement pour des vaccances de rêve    
+            </h1>
+            <p>
+                En plein centre ville ou en pleine nature
+            </P> 
+        </div>
         <div id="older"> 
             <label>
                 <i class="fas fa-map-marker-alt"></i>
@@ -49,39 +51,51 @@
             <button class="btn">Recherche</button>
         </div>
         <div class="filter">
-            <h2>Filtre</h2>
-            <span class="bill">
-                <div id="money">
+            <h3>
+                Filtre
+            </h3>
+            <div class="bill">
+                <span id="money">    
                     <i class="fas fa-money-bill-wave"></i> 
-                </div>
-                    Economique
-            </span> 
-            <span class="wave">
-                <div id="child">
-                        <i class="fas fa-child"></i>   
-                </div>
-                        Familial
-            </span>
-            <span class="hear"> 
-                <div id="love">
+                </span>
+                <p> 
+                    Economique 
+                </p>  
+            </div> 
+            <div class="wave">
+                <span id="child">
+                    <i class="fas fa-child"></i>   
+                </span>
+                <p> 
+                    Familial 
+                </p>  
+            </div>
+            <div class="hear"> 
+                <span id="love">
 
                     <i class="fas fa-heart"></i>         
-                </div>
-                    Romantique
-            </span>
-            <span cl>
-                <div id="dog">
+                </span>
+                <p>
+                     Romantique
+                </p>  
+            </div>
+            <div class="knee">
+                <span id="dog">
                     <i class="fas fa-dog"></i>            
-                </div>
+                </span>
+                <p>    
                     Animaux autorisés
-            </span>
+                </p>  
+            </div>
         </div>
-        <p>
+        <div class="in">
             <span class="circle-info">
                 <i class="fas fa-info"></i>
             </span>
-            Plus de 500 logements sont disponibles dans la ville
-        </p>
+            <p>
+                Plus de 500 logements sont disponibles dans la ville
+            </p>
+        </div>
     </section>
     <section class="club">
         <section class="town"> 
@@ -256,7 +270,7 @@
                         </div>
                         <div class="morning">
                             <h3>
-                                A u coeur de l'eau
+                                A u coeur de l'eau chambres d'hôtes
                             </h3> 
                             <p>
                                 Nuit à partir de <strong>71£</strong> 
@@ -337,7 +351,7 @@
                             île de Frioul
                         </h3>
                     </article>
-                </div>
+            </div>
             </div>
             <div class="parc">
                 <article>
