modif on header and footer

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
                     <img class="logo" src="images/Reservia@3x mini.png"alt="logo"/>
                 </a>
                 <ul>
-                    <li>
-                        <a href="#Hergements">Hergements</a>
-                    </li>
-                    <li>
-                        <a href="#Activités">Activités</a>
-                    </li>
+                    <div class="link">
+                        <li>
+                            <a href="#Hergements">Hergements</a>
+                        </li>
+                        <li>
+                            <a href="#Activités">Activités</a>
+                        </li>
+                    </div>
                     <li>
                         <a href="S'inscrire.html"> S'inscrire</a>  
                     </li>
@@ -396,14 +398,14 @@
                 <li> Données et coordonnées</li>
             </ul>
         </div>
-        <div class="feet">
+        <div class="fast">
             <a href="#Nos hébergements"> Nos hébergements</a>
             <ul>
                     <li>Charte qualité</li>
                     <li> Soumettre votre hôtel</li>
             </ul>
         </div>
-        <div class="feet">
+        <div class="foot">
             <a href="#Assistance"> Assistance</a>
             <ul>
                 <li>Centre d'aide</li>
