--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
                     <img class="logo" src="images/Reservia@3x mini.png"alt="logo"/>
                 </a>
                 <ul>
-                    <div class="link">
-                        <li>
-                            <a href="#Hergements">Hergements</a>
-                        </li>
-                        <li>
-                            <a href="#Activités">Activités</a>
-                        </li>
-                    </div>
+                    <li class="link">
+                        <a href="#Hergements">Hergements</a>
+                    </li>
+                    <li class="link">
+                        <a href="#Activités">Activités</a>
+                    </li>
                     <li>
                         <a href="S'inscrire.html"> S'inscrire</a>  
                     </li>
@@ -49,8 +47,9 @@
             <label>
                 <i class="fas fa-map-marker-alt"></i>
             </label> 
-            <input type="text" placeholder="Marseille,France"/>
-            <button class="btn">Recherche</button>
+            <input type="text" placeholder="Marseille, France"/>
+            <button class="btn"><i class="fas fa-search"></i></button>
+           <button class="btn">Recherche</button>
         </div>
         <div class="filter">
             <h3>
@@ -64,7 +63,7 @@
                     Economique 
                 </p>  
             </div> 
-            <div class="wave">
+            <div class="bill">
                 <span id="child">
                     <i class="fas fa-child"></i>   
                 </span>
@@ -72,7 +71,7 @@
                     Familial 
                 </p>  
             </div>
-            <div class="hear"> 
+            <div class="bill"> 
                 <span id="love">
 
                     <i class="fas fa-heart"></i>         
@@ -81,7 +80,7 @@
                      Romantique
                 </p>  
             </div>
-            <div class="knee">
+            <div class="bill">
                 <span id="dog">
                     <i class="fas fa-dog"></i>            
                 </span>
@@ -122,7 +121,7 @@
                         <i class="fas fa-star"></i>
                         <div class="grey-stars">
                             <i class="fas fa-star"></i>
-                        </
+                        </div>
                     </div>
                 </article>
                 <article> 
