modif on nav mobile and club's section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,24 @@
                     </li>
                 </ul>
             </div>
-
+        </nav>
+        <nav class="mobile">
+            <div class="visitation">
+                <a href="www.images/Reservia@3x.jpg.com">
+                    <img class="logo" src="images/Reservia@3x mini.png"alt="logo"/>
+                </a>
+                <ul>
+                    <li class="link">
+                        <a href="#Hergements">Hergements</a>
+                    </li>
+                    <li class="link">
+                        <a href="#Activités">Activités</a>
+                    </li>
+                    <li>
+                        <a href="S'inscrire.html"> S'inscrire</a>  
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
     <section class="one">
