Modif on nav and carts

--- a/index.html
+++ b/index.html
@@ -33,22 +33,24 @@
             </div>
         </nav>
         <nav class="mobile">
-            <div class="visitation">
-                <a href="www.images/Reservia@3x.jpg.com">
-                    <img class="logo" src="images/Reservia@3x mini.png"alt="logo"/>
-                </a>
-                <ul>
-                    <li class="link">
-                        <a href="#Hergements">Hergements</a>
-                    </li>
-                    <li class="link">
-                        <a href="#Activités">Activités</a>
-                    </li>
-                    <li>
-                        <a href="S'inscrire.html"> S'inscrire</a>  
-                    </li>
-                </ul>
-            </div>
+                <div class="logo-inscription">
+                    <a href="www.images/Reservia@3x.jpg.com">
+                        <img class="logo" src="images/Reservia@3x mini.png"alt="logo"/>
+                    </a>
+                    <div class="inscription">
+                        <a
+                            href="S'inscrire.html"> S'inscrire
+                        </a>  
+                    </div>
+                </div>
+                <div class="cart">
+                    <a
+                            href="#Hergements">Hergements
+                    </a>
+                    <a 
+                        href="#Activités">Activités
+                    </a>
+                </div>
         </nav>
     </header>
     <section class="one">
@@ -65,7 +67,7 @@
                 <i class="fas fa-map-marker-alt"></i>
             </label> 
             <input type="text" placeholder="Marseille, France"/>
-            <button class="btn"><i class="fas fa-search"></i></button>
+            <button class="btn-mobile"><i class="fas fa-search"></i></button>
            <button class="btn">Recherche</button>
         </div>
         <div class="filter">
@@ -244,7 +246,7 @@
                     </div>   
                 </article> 
             </div>
-                <div class="sentanse">
+                <div class="more-view">
                     <p>
                          Afficher plus
                     </p>
